still trying to correct touch events not working on iOS

--- a/styles.css
+++ b/styles.css
@@ -186,6 +186,7 @@ h1 {
   margin-right: auto;
   display: block;
   z-index: 0;
+  cursor: pointer;
 }
 
 .dirt {
